RESOLVED FIXED85060
[Qt][WK2] setVisibleContentsRect is not thread safe
https://bugs.webkit.org/show_bug.cgi?id=85060
Summary [Qt][WK2] setVisibleContentsRect is not thread safe
Yael
Reported 2012-04-27 06:35:49 PDT
SSIA
Attachments
Patch. (1.49 KB, patch)
2012-04-27 06:56 PDT, Yael
noam: review+
Yael
Comment 1 2012-04-27 06:56:10 PDT
Yael
Comment 2 2012-04-27 07:17:30 PDT
Note You need to log in before you can comment on or make changes to this bug.