[Qt][WK2] setVisibleContentsRect is not thread safe https://bugs.webkit.org/show_bug.cgi?id=85060

Reviewed by Noam Rosenthal.

Don't call WebLayerTreeRenderer::setVisibleContentsRect directly. Use bind() instead.

* UIProcess/LayerTreeHostProxy.cpp:
(WebKit::LayerTreeHostProxy::setVisibleContentsRect):



Canonical link: https://commits.webkit.org/102563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115426 268f45cc-cd09-0410-ab3c-d52691b4dbfc